--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
 <div class="scroll-container">
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>One paper is accepted to PR, 2025.</td></tr>
 		<tr><td>One paper is accepted to ESWA, 2025.</td></tr>
 		<tr><td>One paper is accepted to IEEE JBHI, 2025.</td></tr>
 		<tr><td>One paper is accepted to IEEE TMI, 2025.</td></tr>
