--- a/index_zw.html
+++ b/index_zw.html
@@ -157,6 +157,7 @@
 <div class="scroll-container">
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>一篇论文被 PR 接收, 2025.</td></tr>
 		<tr><td>一篇论文被 ESWA 接收, 2025.</td></tr>
 		<tr><td>一篇论文被 IEEE JBHI 接收, 2025.</td></tr>
 		<tr><td>一篇论文被 IEEE TMI 接收, 2025.</td></tr>
