--- a/index.html
+++ b/index.html
@@ -47,14 +47,13 @@
 				</div>
 
 				<p>
-					Assistant Professor<br>
-					School of Communication & Information Engineering,<br>
-					Shanghai University,<br>
-					T807, Xiangying Building, Baoshan, Shanghai.<br>
+					Associate Professor<br>
+					School of Computer Science and Technology<br>
+					East China Normal University<br>
 					<br>
-					Email: cvjunchengli[at]gmail.com  & junchengli[at]shu.edu.cn<br>
+					Email: cvjunchengli[at]gmail.com<br>
 					<br>
-					<font color="red">I'm always looking for self-motivated students working with me on computer vision, image processing, and medical image analysis. For prospective students, please send me an email with your CV and transcript.</font> 	       
+					<font color="red">I'm always looking for self-motivated students to work with me on computer vision, image processing, and medical image analysis. For prospective students, please send me an email with your CV and transcript.</font> 	       
 				</p>
 
 				<br>
