--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
 <h2>News</h2>
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>Congratulations! ESRT has reached 1,000 citations! 2025.</td></tr>
 		<tr><td>Selected into the World's Top 2% Scientists list, 2025.</td></tr>
 		<tr><td>Selected into the AI 2000 list, 2025.</td></tr>
 		<tr><td>Congratulations! MSRN has reached 1,000 citations! 2025.</td></tr>
@@ -257,7 +258,7 @@
 </tbody>
 </table>
 
-<h2>Selected Publications [Total Citations: 4889] [Highest Citation: 1078] </h2>
+<h2>Selected Publications [Total Citations: 4906] [Highest Citation: 1079] </h2>
 <h4>#：Co-ﬁrst authors *：Corresponding author</h3>
 
 <h3>Survey</h4>
@@ -784,7 +785,7 @@
 		<td width="206">
 		<img src="./indexpics/ESRT.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="https://arxiv.org/pdf/2108.11084.pdf" target="_blank">Transformer for Single Image Super-Resolution <font color="red">【Hot】[Citations: 980+]</font></a><br>
+		<td> <a href="https://arxiv.org/pdf/2108.11084.pdf" target="_blank">Transformer for Single Image Super-Resolution <font color="red">【Hot】[Citations: 1000+]</font></a><br>
 		Zhisheng Lu#, <b>Juncheng Li#</b>, Hong Liu*, Chaoyan Huang, Linlin Zhang, and Tieyong Zeng
 		<p><em>The Conference on Computer Vision and Pattern Recognition Workshop</em> (<i><b>CVPR Workshop</b></i>), 2022. <br>
 		<font color="red">NTIRE</font><br>
