--- a/index_zw.html
+++ b/index_zw.html
@@ -102,6 +102,7 @@
 <h2>新闻</h2>
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>祝贺！ESRT的引用次数已达1,000次！ 2025</td></tr>
 		<tr><td>入选全球前2%顶尖科学家榜单, 2025.</td></tr>
 		<tr><td>入选AI 2000全球人工智能学者榜单, 2025.</td></tr>
 		<tr><td>祝贺！MSRN的引用次数已达1,000次！ 2025</td></tr>
@@ -275,7 +276,7 @@
 </table>
 
 
-<h2>精选出版物 [总引用: 4889] [最高引用: 1078] </h2>
+<h2>精选出版物 [总引用: 4906] [最高引用: 1079] </h2>
 <h4>#：共同一作 *：通讯作者</h3>
 
 <h3>综述</h3>
@@ -792,7 +793,7 @@
 		<td width="206">
 		<img src="./indexpics/ESRT.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="https://arxiv.org/pdf/2108.11084.pdf" target="_blank">Transformer for Single Image Super-Resolution <font color="red">【Hot】【引用：980+】</font></a><br>
+		<td> <a href="https://arxiv.org/pdf/2108.11084.pdf" target="_blank">Transformer for Single Image Super-Resolution <font color="red">【Hot】【引用：1000+】</font></a><br>
 		Zhisheng Lu#, <b>Juncheng Li#</b>, Hong Liu*, Chaoyan Huang, Linlin Zhang, and Tieyong Zeng
 		<p><em>The Conference on Computer Vision and Pattern Recognition Workshop</em> (<i><b>CVPR Workshop</b></i>), 2022. <br>
 		<font color="red">NTIRE</font><br>
