--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
 	<tbody>
 		<tr><td>Congratulations! ESRT has reached 1,000 citations! 2025.</td></tr>
 		<tr><td>Selected into the World's Top 2% Scientists list, 2025.</td></tr>
-		<tr><td>Selected into the AI 2000 list, 2025.</td></tr>
 		<tr><td>Congratulations! MSRN has reached 1,000 citations! 2025.</td></tr>
-		<tr><td>I will serve as a SPC for ECAI-25, 2025.</td></tr>
+		<tr><td>One paper (IEEE TITS) is selected as Highly Cited Papers in the latest issue of ESI Index, 2025.</td></tr>
 		<tr><td>One paper (IEEE TMM) is selected as Highly Cited Papers in the latest issue of ESI Index, 2025.</td></tr>
-		<tr><td>I will serve as a PC Member for IJCAI-25.</td></tr>
+		<tr><td>I will serve as a SPC for ECAI, 2025.</td></tr>
+		<tr><td>I will serve as a PC Member for IJCAI, 2025.</td></tr>
 		<tr><td>One paper (IEEE TIP) is selected as Highly Cited Papers in the latest issue of ESI Index, 2024.</td></tr>
 		<tr><td>Selected into the World's Top 2% Scientists list, 2023.</td></tr>
 		<tr><td>One paper (IEEE TMM) is selected as Highly Cited Papers in the latest issue of ESI Index, 2023.</td></tr>
