--- a/index_zw.html
+++ b/index_zw.html
@@ -104,10 +104,10 @@
 	<tbody>
 		<tr><td>祝贺！ESRT的引用次数已达1,000次！ 2025</td></tr>
 		<tr><td>入选全球前2%顶尖科学家榜单, 2025.</td></tr>
-		<tr><td>入选AI 2000全球人工智能学者榜单, 2025.</td></tr>
 		<tr><td>祝贺！MSRN的引用次数已达1,000次！ 2025</td></tr>
-		<tr><td>我将担任 ECAI-25 的高级程序委员会成员（SPC）, 2025.</td></tr>
+		<tr><td>1 篇论文（IEEE TITS）入选ESI高被引论文, 2025.</td></tr>
 		<tr><td>1 篇论文（IEEE TMM）入选ESI高被引论文, 2025.</td></tr>
+		<tr><td>我将担任 ECAI-25 的高级程序委员会成员（SPC）, 2025.</td></tr>
 		<tr><td>我将担任 IJCAI-25 的程序委员会成员（PC）.</td></tr>
 		<tr><td>1 篇论文（IEEE TIP）入选ESI高被引论文, 2024.</td></tr>
 		<tr><td>入选全球前2%顶尖科学家榜单, 2023.</td></tr>
