--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				</div>
 
 				<p>
-					Associate Professor<br>
+					Ph.D., Associate Professor<br>
 					School of Computer Science and Technology<br>
 					East China Normal University<br>
 					<br>
@@ -96,7 +96,7 @@
 			<td width="206">
 			<img src="./pic/Wechat.jpg" width="200" height = "200" style="box-shadow: 4px 4px 8px #888">
 			</td>		
-			<td>Intelligent Imaging Computing Lab (IIC Lab)</td><br>
+			<td>Intelligent Imaging Computing Group (IIC Group)</td><br>
 			<td>Welcome to follow!</td><br>
 			</td>
 		</tr>
