--- a/index_zw.html
+++ b/index_zw.html
@@ -46,7 +46,7 @@
 				</div>
 
 				<p>
-					副教授<br>
+					博士，副教授<br>
 					计算机科学与技术学院<br>
 					华东师范大学<br>
 					<br>
@@ -92,7 +92,7 @@
 			<td width="206">
 			<img src="./pic/Wechat.jpg" width="200" height = "200" style="box-shadow: 4px 4px 8px #888">
 			</td>		
-			<td>智能影像计算实验室</td><br>
+			<td>智能影像计算小组</td><br>
 			<td>团队公众号，欢迎关注！</td><br>
 			</td>
 		</tr>
