--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 </tbody>
 </table>
 
-<h2>Selected Publications [Total Citations: 4997] [Highest Citation: 1083] </h2>
+<h2>Selected Publications [Total Citations: 4998] [Highest Citation: 1083] </h2>
 <h4>#：Co-ﬁrst authors *：Corresponding author</h3>
 
 <h3>Survey</h4>
@@ -269,7 +269,7 @@
 		<img src="./indexpics/ESWA2025.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="" target="_blank">Fast MRI Reconstruction: A Thorough Survey from Single-Modal to Multi-Modal<font color="red">【New】</font></a><br>
-		Weiyi Lyu, Xinming Fang, Chaoyan Huang, Minhua Lu*, Jun Wang, Jun Shi, Juncheng Lia∗
+		Weiyi Lyu, Xinming Fang, Chaoyan Huang, Minhua Lu*, Jun Wang, Jun Shi, <b>Juncheng Li*</b>
 		<p><em>Expert Systems with Applications</em> (<i><b>ESWA</b></i>), 2025.<br>
 		<a href="", target="_blank">[Paper]</a>
 		</td>
@@ -293,7 +293,7 @@
 	<tr></tr>
     <tr></tr>
 	<tr></tr>
-	<tr>	
+	<!-- <tr>	
 		<td width="206">
 		<img src="./indexpics/JIG.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
@@ -306,7 +306,7 @@
 	<tr></tr>
     <tr></tr>
 	<tr></tr>
- </tbody></table>
+ </tbody></table> -->
 
 
 <h3>Medical Image Processing</h4>
@@ -413,7 +413,7 @@
 	<tr></tr>
     <tr></tr>
 	<tr></tr>
-    <tr>	
+    <!-- <tr>	
 		<td width="206">
 		<img src="./indexpics/EAMRI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
@@ -426,7 +426,7 @@
 	</tr>
 	<tr></tr>
     <tr></tr>
-	<tr></tr>
+	<tr></tr> -->
     <tr>	
 		<td width="206">
 		<img src="./indexpics/TMI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
@@ -466,7 +466,7 @@
 		<td> <a href="paper/MICCAI_2024.pdf" target="_blank">Topological GCN for Improving Detection of Hip Landmarks from B-Mode Ultrasound Images<font color="red">【New】</font></a><br>
 		Tianxiang Huang, Jing Shi, Ge Jin, <b>Juncheng Li</b>, Jun Wang, Jun Du, and Jun Shi
 		<p><em>International Conference on Medical Image Computing and Computer-Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2024. <br>
-		<font color="red">Top medical image processing conference.（Oral Presentation）</font><br>
+		<font color="red">Oral Presentation</font><br>
         <a href="paper/MICCAI_2024.pdf", target="_blank">[Paper]</a>
 		</td>
 	</tr>
@@ -480,7 +480,6 @@
 		<td> <a href="paper/MICCAI_2023.pdf" target="_blank">Multi-Scale Prototypical Transformer for Whole Slide Image Classification</a><br>
 		Saisai Ding, Jun Wang, <b>Juncheng Li</b>, and Jun Shi*
 		<p><em>International Conference on Medical Image Computing and Computer-Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2023. <br>
-		<font color="red">Top medical image processing conference.</font><br>
         <a href="https://link.springer.com/chapter/10.1007/978-3-031-43987-2_58", target="_blank">[Paper]</a>
 		</td>
 	</tr>
@@ -514,7 +513,7 @@
 		<td width="206">
 		<img src="./indexpics/CFIN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="" target="_blank">Cross-Receptive Focused Inference Network for Lightweight Image Super-Resolution (<font color="red"><i><b>ESI Highly Cited Paper, 25.01</b></i></font>)<br></a><br>
+		<td> <a href="" target="_blank">Cross-Receptive Focused Inference Network for Lightweight Image Super-Resolution (<font color="red"><i><b>ESI Highly Cited Paper</b></i></font>)<br></a><br>
 		Wenjie Li, <b>Juncheng Li</b>, Guangwei Gao, Weihong Deng, Jiantao Zhou, Jian Yang, and Guo-Jun Qi
 		<p><em>IEEE Transactions on Multimedia</em> (<i><b>TMM</b></i>), 2024. <br>
 		<a href="paper/CFIN.pdf", target="_blank">[Paper]</a>
@@ -524,7 +523,7 @@
     <tr></tr>
 	<tr></tr>
 
-	<tr>	
+	<!-- <tr>	
 		<td width="206">
 		<img src="./indexpics/EWT.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
@@ -536,13 +535,13 @@
 	</tr>
 	<tr></tr>
     <tr></tr>
-	<tr></tr>
+	<tr></tr> -->
 
 	<tr>	
 		<td width="206">
 		<img src="./indexpics/CTCNet.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="https://arxiv.org/pdf/2204.08696.pdf" target="_blank">CTCNet: A CNN-Transformer Cooperation Network for Face Image Super-Resolution</a> (<font color="red"><i><b>ESI Highly Cited Paper, 24.05, 24.09, 24.11, 25.01</b></i></font>)<br>
+		<td> <a href="https://arxiv.org/pdf/2204.08696.pdf" target="_blank">CTCNet: A CNN-Transformer Cooperation Network for Face Image Super-Resolution</a> (<font color="red"><i><b>ESI Highly Cited Paper</b></i></font>)<br>
 		Guangwei Gao#, Zixiang Xu#, <b>Juncheng Li*</b>, Jian Yang, Tieyong Zeng, and Guo-Jun Qi.
 		<p><em>IEEE Transactions on Image Processing</em> (<i><b>IEEE TIP</b></i>), 2023. <br>
 		<a href="paper/CTCNet.pdf", target="_blank">[Paper]</a>
@@ -556,7 +555,7 @@
 		<td width="206">
 		<img src="./indexpics/FBSNet.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="https://ieeexplore.ieee.org/abstract/document/9732215" target="_blank">FBSNet: A Fast Bilateral Symmetrical Network for Real-Time Semantic Segmentation</a> (<font color="red"><i><b>ESI Highly Cited Paper, 23.11, 24.01, 24.05, 24.07, 24.09, 24.11, 25.01</b></i></font>)<br>
+		<td> <a href="https://ieeexplore.ieee.org/abstract/document/9732215" target="_blank">FBSNet: A Fast Bilateral Symmetrical Network for Real-Time Semantic Segmentation</a> (<font color="red"><i><b>ESI Highly Cited Paper</b></i></font>)<br>
 		Guangwei Gao#, Guoan Xu#, <b>Juncheng Li*</b>, Yi Yu*, Huimin Lu, and Jian Yang
 		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2022. <br>
 		<a href="paper/FBSNet.pdf", target="_blank">[Paper]</a>
@@ -567,7 +566,7 @@
     <tr></tr>
 	<tr></tr>
 
-	<tr>	
+	<!-- <tr>	
 		<td width="206">
 		<img src="./indexpics/ASRN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
@@ -579,7 +578,7 @@
 	</tr>
 	<tr></tr>
     <tr></tr>
-	<tr></tr>
+	<tr></tr> -->
 
 	<tr>	
 		<td width="206">
@@ -669,6 +668,45 @@
 
 <h4>Conference Papers</h4></table>
 <table id="tbPublications" width="100%">
+		<tr>	
+		<td width="206">
+		<img src="./indexpics/MSRN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="paper/ECCV_2018.pdf" target="_blank">Multi-scale Residual Network for Image Super-Resolution <font color="red">【Hot】[Citations: 1000+]</font></a><br>
+		<b>Juncheng Li</b>, Faming Fang*, Kangfu Mei, and Guixu Zhang.
+		<p><em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2018.<br>
+		<iframe src="https://ghbtns.com/github-btn.html?user=MIVRC&repo=MSRN-PyTorch&type=star&count=true&size=small" frameborder="0" scrolling="0" width="150px" height="20px"></iframe>
+		<iframe src="https://ghbtns.com/github-btn.html?user=MIVRC&repo=MSRN-PyTorch&type=fork&count=true&size=small" frameborder="0" scrolling="0" width="150" height="20" title="GitHub"></iframe><br>
+		<a href="paper/ECCV_2018.pdf", target="_blank">[Paper]</a>
+        <a href="poster/MSRN-poster.pdf", target="_blank">[Poster]</a>
+		<a href="https://github.com/MIVRC/MSRN-PyTorch", target="_blank">[Code]</a>
+		<a href="https://junchenglee.com/projects/ECCV2018_MSRN", target="_blank">[Homepage]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/ESRT.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="https://arxiv.org/pdf/2108.11084.pdf" target="_blank">Transformer for Single Image Super-Resolution <font color="red">【Hot】[Citations: 1000+]</font></a><br>
+		Zhisheng Lu#, <b>Juncheng Li#</b>, Hong Liu*, Chaoyan Huang, Linlin Zhang, and Tieyong Zeng
+		<p><em>The Conference on Computer Vision and Pattern Recognition (<i><b>CVPR</b></i>) Workshop</em>, 2022. <br>
+		<iframe src="https://ghbtns.com/github-btn.html?user=luissen&repo=ESRT&type=star&count=true&size=small" frameborder="0" scrolling="0" width="150px" height="20px"></iframe>
+		<iframe src="https://ghbtns.com/github-btn.html?user=luissen&repo=ESRT&type=fork&count=true&size=small" frameborder="0" scrolling="0" width="150" height="20" title="GitHub"></iframe><br>
+		<a href="paper/ESRT.pdf", target="_blank">[Paper]</a>
+		<a href="paper/ESRT-supp.pdf", target="_blank">[Supp]</a>
+		<a href="poster/ESRT.pdf", target="_blank">[Poster]</a>
+		<a href="https://github.com/luissen/ESRT", target="_blank">[Code]</a>
+		<a href="projects/ESRT", target="_blank">[Homepage]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+	
 	<tr>	
 		<td width="206">
 		<img src="./indexpics/CVPR2024.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
@@ -676,7 +714,6 @@
 		<td><a href="" target="_blank">Learning Coupled Dictionaries from Unpaired Data for Image Super-Resolution <font color="red">【New】</font></a><br>
 		Longguang Wang, <b>Juncheng Li</b>, Yingqian Wang, Qingyong Hu, and Yulan Guo*.
 		<p><em>Conference on Computer Vision and Pattern Recognition</em> (<i><b>CVPR</b></i>), 2024. <br>
-		<font color="red">Top computer vision conference.</font><br>
 		<a href="paper/CVPR.pdf", target="_blank">[Paper]</a>
 		<a href="", target="_blank">[Poster]</a>
 		<a href="", target="_blank">[Code]</a>
@@ -693,7 +730,7 @@
 		<td><a href="http://arxiv.org/abs/2204.13286" target="_blank">Lightweight Bimodal Network for Single-Image Super-Resolution via Symmetric CNN and Recursive Transformer</a><br>
 		Guangwei Gao#, Zhengxue Wang#, <b>Juncheng Li*</b>, Wenjie Li, Yi Yu, and Tieyong Zeng
 		<p><em>International Joint Conference on Artificial Intelligence</em> (<i><b>IJCAI</b></i>), 2022. <br>
-		<font color="red">Top artificial intelligence conference. Oral Presentation</font><br>
+		<font color="red">Oral Presentation</font><br>
 		<a href="paper/IJCAI2022.pdf", target="_blank">[Paper]</a>
 		<a href="https://github.com/IVIPLab/LBNet", target="_blank">[Code]</a>
 		<a href="https://guangweigao.github.io/IJCAI22/LBNet.html", target="_blank">[Homepage]</a>
@@ -710,7 +747,6 @@
 		<td><a href="" target="_blank">Feature Distillation Interaction Weighting Network for Lightweight Image Super-Resolution</a><br>
 		Guangwei Gao#, Wenjie Li#, <b>Juncheng Li*</b>, Fei Wu, Huimin Lu, and Yi Yu
 		<p><em>Association for the Advancement of Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2022. <br>
-		<font color="red">Top artificial intelligence conference.</font><br>
 		<a href="paper/AAAI.pdf", target="_blank">[Paper]</a>
 		<a href="poster/AAAI-poster.pdf", target="_blank">[Poster]</a>
 		<a href="https://github.com/IVIPLab/FDIWN", target="_blank">[Code]</a>
@@ -728,7 +764,6 @@
 		<td><a href="paper/ACMMM_2021.pdf" target="_blank">Feedback Network for Mutually Boosted Stereo Image Super-Resolution and Disparity Estimation</a><br>
 		Qinyan Dai, <b>Juncheng Li</b>, Qiaosi Yi, Faming Fang*, and Guixu Zhang.
 		<p><em>ACM International Conference on Multimedia</em> (<i><b>ACMMM</b></i>), 2021. <br>
-		<font color="red">Top multimedia conference.</font><br>
 		<a href="paper/ACMMM_2021.pdf", target="_blank">[Paper]</a>
 		<a href="poster/ACMMM_poster.pdf", target="_blank">[Poster]</a>
 		<a href="https://github.com/MIVRC/SSRDEFNet-PyTorch", target="_blank">[Code]</a>
@@ -745,7 +780,6 @@
 		<td><a href="paper/ICCV_2021.pdf" target="_blank">Structure-Preserving Deraining with Residue Channel Prior Guidance</a><br>
 		Qiaosi Yi, <b>Juncheng Li</b>, Qinyan Dai, Faming Fang*, Guixu Zhang, and Tieyong Zeng.
 		<p><em>International Conference on Computer Vision</em> (<i><b>ICCV</b></i>), 2021. <br>
-		<font color="red">Top computer vision conference.</font><br>
 		<a href="paper/ICCV_2021.pdf", target="_blank">[Paper]</a>
 		<a href="poster/ICCV_poster.pdf", target="_blank">[Poster]</a>
 		<a href="https://github.com/Joyies/SPDNet", target="_blank">[Code]</a>
@@ -755,60 +789,19 @@
 	<tr></tr>
     <tr></tr>
 	<tr></tr>
-
-	<tr>	
-		<td width="206">
-		<img src="./indexpics/MSRN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td> <a href="paper/ECCV_2018.pdf" target="_blank">Multi-scale Residual Network for Image Super-Resolution <font color="red">【Hot】[Citations: 1000+]</font></a><br>
-		<b>Juncheng Li</b>, Faming Fang*, Kangfu Mei, and Guixu Zhang.
-		<p><em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2018.<br>
-		<font color="red">Top computer vision conference.</font><br>
-		<iframe src="https://ghbtns.com/github-btn.html?user=MIVRC&repo=MSRN-PyTorch&type=star&count=true&size=small" frameborder="0" scrolling="0" width="150px" height="20px"></iframe>
-		<iframe src="https://ghbtns.com/github-btn.html?user=MIVRC&repo=MSRN-PyTorch&type=fork&count=true&size=small" frameborder="0" scrolling="0" width="150" height="20" title="GitHub"></iframe><br>
-		<a href="paper/ECCV_2018.pdf", target="_blank">[Paper]</a>
-        <a href="poster/MSRN-poster.pdf", target="_blank">[Poster]</a>
-		<a href="https://github.com/MIVRC/MSRN-PyTorch", target="_blank">[Code]</a>
-		<a href="https://junchenglee.com/projects/ECCV2018_MSRN", target="_blank">[Homepage]</a>
-		</td>
-	</tr>
-	<tr></tr>
-    <tr></tr>
-	<tr></tr>
 </tbody></table>
 
 
 
-<h4>Workshop Papers</h4></table></table>
+<!-- <h4>Workshop Papers</h4></table></table>
 <table id="tbPublications" width="100%">
-	<tr>	
-		<td width="206">
-		<img src="./indexpics/ESRT.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td> <a href="https://arxiv.org/pdf/2108.11084.pdf" target="_blank">Transformer for Single Image Super-Resolution <font color="red">【Hot】[Citations: 1000+]</font></a><br>
-		Zhisheng Lu#, <b>Juncheng Li#</b>, Hong Liu*, Chaoyan Huang, Linlin Zhang, and Tieyong Zeng
-		<p><em>The Conference on Computer Vision and Pattern Recognition Workshop</em> (<i><b>CVPR Workshop</b></i>), 2022. <br>
-		<font color="red">NTIRE</font><br>
-		<iframe src="https://ghbtns.com/github-btn.html?user=luissen&repo=ESRT&type=star&count=true&size=small" frameborder="0" scrolling="0" width="150px" height="20px"></iframe>
-		<iframe src="https://ghbtns.com/github-btn.html?user=luissen&repo=ESRT&type=fork&count=true&size=small" frameborder="0" scrolling="0" width="150" height="20" title="GitHub"></iframe><br>
-		<a href="paper/ESRT.pdf", target="_blank">[Paper]</a>
-		<a href="paper/ESRT-supp.pdf", target="_blank">[Supp]</a>
-		<a href="poster/ESRT.pdf", target="_blank">[Poster]</a>
-		<a href="https://github.com/luissen/ESRT", target="_blank">[Code]</a>
-		<a href="projects/ESRT", target="_blank">[Homepage]</a>
-		</td>
-	</tr>
-	<tr></tr>
-    <tr></tr>
-	<tr></tr>
-
 	<tr>	
 		<td width="206">
 		<img src="./indexpics/MDRN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="https://arxiv.org/pdf/2204.13873.pdf" target="_blank">Multiple Degradation and Reconstruction Network for Single Image Denoising via Knowledge Distillation </a><br>
 		<b>Juncheng Li</b>, Hanhui Yang, Qiaosi Yi, Faming Fang, Guangwei Gao, Tieyong Zeng*, and Guixu Zhang
-		<p><em>The Conference on Computer Vision and Pattern Recognition Workshop</em> (<i><b>CVPR Workshop</b></i>), 2022. <br>
+		<p><em>The Conference on Computer Vision and Pattern Recognition (<i><b>CVPR</b></i>) Workshop</em>, 2022. <br>
 		<font color="red">NTIRE</font><br>
 		<a href="paper/MDRN.pdf", target="_blank">[Paper]</a>
 		<a href="poster/MDRN.pdf", target="_blank">[Poster]</a>
@@ -824,7 +817,7 @@
 		</td>		
 		<td> <a href="paper/ICCVW_LCI_2019.pdf" target="_blank">Lightweight and Accurate Recursive Fractal Network for Image Super-Resolution</a><br>
 		<b>Juncheng Li</b>, Yiting Yuan, Kangfu Mei, and Faming Fang*.
-		<p><em>International Conference on Computer Vision Workshop</em> (<i><b>ICCV Workshop</b></i>), 2019. <br>
+		<p><em>International Conference on Computer Vision (<i><b>ICCV</b></i>) Workshop</em>, 2019. <br>
 		<font color="red">Oral Presentation. Student Travel Award.</font><br>
 		<a href="paper/ICCVW_LCI_2019.pdf", target="_blank">[Paper]</a>
         <a href="poster/ICCVW_LCI_poster.pdf", target="_blank">[Poster]</a>
@@ -836,7 +829,7 @@
 	<tr></tr>
     <tr></tr>
 	<tr></tr>
-</tbody></table>
+</tbody></table> -->
 
 
 <!-- <h4>Selected Challenge Reports</h4>
@@ -1185,7 +1178,7 @@
  <!--<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=lSzpjw-jyYmDQRUSrVJGAFZBVU3oVwp87NxUFm1Zt_w'></script>
 </div>-->  
 <br>
-&copy; Juncheng Li | Last updated: 2025-7
+&copy; Juncheng Li | Last updated: 2025-10
 </center>
 </p>
 
