--- a/index_zw.html
+++ b/index_zw.html
@@ -276,7 +276,7 @@
 </table>
 
 
-<h2>精选出版物 [总引用: 4997] [最高引用: 1083] </h2>
+<h2>精选出版物 [总引用: 4998] [最高引用: 1083] </h2>
 <h4>#：共同一作 *：通讯作者</h3>
 
 <h3>综述</h3>
@@ -311,7 +311,7 @@
 		<tr></tr>
 		<tr></tr>
 		<tr></tr>
-		<tr>	
+		<!-- <tr>	
 			<td width="206">
 			<img src="./indexpics/JIG.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 			</td>		
@@ -323,7 +323,7 @@
 		</tr>
 		<tr></tr>
 		<tr></tr>
-		<tr></tr>
+		<tr></tr> -->
 	 </tbody></table>
 
 
@@ -431,7 +431,7 @@
 	<tr></tr>
     <tr></tr>
 	<tr></tr>
-	<tr>	
+	<!-- <tr>	
 		<td width="206">
 		<img src="./indexpics/EAMRI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
@@ -444,7 +444,7 @@
 	</tr>
 	<tr></tr>
     <tr></tr>
-	<tr></tr>
+	<tr></tr> -->
 	<tr>	
 		<td width="206">
 		<img src="./indexpics/TMI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
@@ -484,7 +484,7 @@
 		<td> <a href="paper/MICCAI_2024.pdf" target="_blank">Topological GCN for Improving Detection of Hip Landmarks from B-Mode Ultrasound Images<font color="red">【最新】</font></a><br>
 		Tianxiang Huang, Jing Shi, Ge Jin, <b>Juncheng Li</b>, Jun Wang, Jun Du, and Jun Shi
 		<p><em>International Conference on Medical Image Computing and Computer-Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2024. <br>
-		<font color="red">医学影像处理顶级会议. 口头报告（Oral Presentation）</font><br>
+		<font color="red">口头报告（Oral Presentation）</font><br>
         <a href="", target="_blank">[论文]</a>
 		</td>
 	</tr>
@@ -498,7 +498,6 @@
 		<td> <a href="paper/MICCAI_2023.pdf" target="_blank">Multi-Scale Prototypical Transformer for Whole Slide Image Classification</a><br>
 		Saisai Ding, Jun Wang, <b>Juncheng Li</b>, and Jun Shi*
 		<p><em>International Conference on Medical Image Computing and Computer-Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2023. <br>
-		<font color="red">医学影像处理顶级会议</font><br>
         <a href="https://link.springer.com/chapter/10.1007/978-3-031-43987-2_58", target="_blank">[论文]</a>
 		</td>
 	</tr>
@@ -529,7 +528,7 @@
 		<td width="206">
 		<img src="./indexpics/CFIN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="" target="_blank">Cross-Receptive Focused Inference Network for Lightweight Image Super-Resolution (<font color="red"><i><b>高被引论文, 25.01</b></i></font>)</a><br>
+		<td> <a href="" target="_blank">Cross-Receptive Focused Inference Network for Lightweight Image Super-Resolution (<font color="red"><i><b>ESI 高被引论文</b></i></font>)</a><br>
 		Wenjie Li, <b>Juncheng Li</b>, Guangwei Gao, Weihong Deng, Jiantao Zhou, Jian Yang, and Guo-Jun Qi
 		<p><em>IEEE Transactions on Multimedia</em> (<i><b>TMM</b></i>), 2024. <br>
 		<a href="paper/CFIN.pdf", target="_blank">[论文]</a>
@@ -539,7 +538,7 @@
     <tr></tr>
 	<tr></tr>
 
-    <tr>	
+    <!-- <tr>	
 		<td width="206">
 		<img src="./indexpics/EWT.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
@@ -551,13 +550,13 @@
 	</tr>
 	<tr></tr>
     <tr></tr>
-	<tr></tr>
+	<tr></tr> -->
 
 	<tr>	
 		<td width="206">
 		<img src="./indexpics/CTCNet.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="https://arxiv.org/pdf/2204.08696.pdf" target="_blank">CTCNet: A CNN-Transformer Cooperation Network for Face Image Super-Resolution (<font color="red"><i><b>高被引论文, 24.05, 24.09, 24.11, 25.01</b></i></font>)</a><br>
+		<td> <a href="https://arxiv.org/pdf/2204.08696.pdf" target="_blank">CTCNet: A CNN-Transformer Cooperation Network for Face Image Super-Resolution (<font color="red"><i><b>ESI 高被引论文</b></i></font>)</a><br>
 		Guangwei Gao#, Zixiang Xu#, <b>Juncheng Li*</b>, Jian Yang, Tieyong Zeng, and Guo-Jun Qi.
 		<p><em>IEEE Transactions on Image Processing</em> (<i><b>IEEE TIP</b></i>), 2023. <br>
 		<a href="paper/CTCNet.pdf", target="_blank">[论文]</a>
@@ -571,7 +570,7 @@
 		<td width="206">
 		<img src="./indexpics/FBSNet.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="https://ieeexplore.ieee.org/abstract/document/9732215" target="_blank">FBSNet: A Fast Bilateral Symmetrical Network for Real-Time Semantic Segmentation</a> (<font color="red"><i><b>高被引论文, 23.11, 24.01, 24.05, 24.07, 24.09, 24.11, 25.01</b></i></font>)<br>
+		<td> <a href="https://ieeexplore.ieee.org/abstract/document/9732215" target="_blank">FBSNet: A Fast Bilateral Symmetrical Network for Real-Time Semantic Segmentation</a> (<font color="red"><i><b>ESI 高被引论文</b></i></font>)<br>
 		Guangwei Gao#, Guoan Xu#, <b>Juncheng Li*</b>, Yi Yu*, Huimin Lu, and Jian Yang
 		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2022. <br>
 		<a href="paper/FBSNet.pdf", target="_blank">[论文]</a>
@@ -582,7 +581,7 @@
     <tr></tr>
 	<tr></tr>
 
-	<tr>	
+	<!-- <tr>	
 		<td width="206">
 		<img src="./indexpics/ASRN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
@@ -594,7 +593,7 @@
 	</tr>
 	<tr></tr>
     <tr></tr>
-	<tr></tr>
+	<tr></tr> -->
 
 	<tr>	
 		<td width="206">
@@ -682,12 +681,50 @@
 <table id="tbPublications" width="100%">
 	<tr>	
 		<td width="206">
+		<img src="./indexpics/MSRN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="paper/ECCV_2018.pdf" target="_blank">Multi-scale Residual Network for Image Super-Resolution <font color="red">【Hot】【引用：1000+】</font></a><br>
+		<b>Juncheng Li</b>, Faming Fang*, Kangfu Mei, and Guixu Zhang.
+		<p><em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2018.<br>
+		<iframe src="https://ghbtns.com/github-btn.html?user=MIVRC&repo=MSRN-PyTorch&type=star&count=true&size=small" frameborder="0" scrolling="0" width="150px" height="20px"></iframe>
+		<iframe src="https://ghbtns.com/github-btn.html?user=MIVRC&repo=MSRN-PyTorch&type=fork&count=true&size=small" frameborder="0" scrolling="0" width="150" height="20" title="GitHub"></iframe><br>
+		<a href="paper/ECCV_2018.pdf", target="_blank">[论文]</a>
+        <a href="poster/MSRN-poster.pdf", target="_blank">[海报]</a>
+		<a href="https://github.com/MIVRC/MSRN-PyTorch", target="_blank">[代码]</a>
+		<a href="https://junchenglee.com/projects/ECCV2018_MSRN", target="_blank">[主页]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+	
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/ESRT.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="https://arxiv.org/pdf/2108.11084.pdf" target="_blank">Transformer for Single Image Super-Resolution <font color="red">【Hot】【引用：1000+】</font></a><br>
+		Zhisheng Lu#, <b>Juncheng Li#</b>, Hong Liu*, Chaoyan Huang, Linlin Zhang, and Tieyong Zeng
+		<p><em>The Conference on Computer Vision and Pattern Recognition (<i><b>CVPR</b></i>) Workshop</em>, 2022. <br>
+		<iframe src="https://ghbtns.com/github-btn.html?user=luissen&repo=ESRT&type=star&count=true&size=small" frameborder="0" scrolling="0" width="150px" height="20px"></iframe>
+		<iframe src="https://ghbtns.com/github-btn.html?user=luissen&repo=ESRT&type=fork&count=true&size=small" frameborder="0" scrolling="0" width="150" height="20" title="GitHub"></iframe><br>
+		<a href="paper/ESRT.pdf", target="_blank">[论文]</a>
+		<a href="paper/ESRT-supp.pdf", target="_blank">[补充材料]</a>
+		<a href="poster/ESRT.pdf", target="_blank">[海报]</a>
+		<a href="https://github.com/luissen/ESRT", target="_blank">[代码]</a>
+		<a href="projects/ESRT", target="_blank">[主页]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+	
+	<tr>	
+		<td width="206">
 		<img src="./indexpics/CVPR2024.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td><a href="" target="_blank">Learning Coupled Dictionaries from Unpaired Data for Image Super-Resolution <font color="red">【New】</font></a><br>
 		Longguang Wang, <b>Juncheng Li</b>, Yingqian Wang, Qingyong Hu, and Yulan Guo*.
 		<p><em>Conference on Computer Vision and Pattern Recognition</em> (<i><b>CVPR</b></i>), 2024. <br>
-		<font color="red">计算机顶级会议</font><br>
 		<a href="paper/CVPR.pdf", target="_blank">[论文]</a>
 		<a href="", target="_blank">[海报]</a>
 		<a href="", target="_blank">[代码]</a>
@@ -736,7 +773,6 @@
 		<td><a href="paper/ACMMM_2021.pdf" target="_blank">Feedback Network for Mutually Boosted Stereo Image Super-Resolution and Disparity Estimation</a><br>
 		Qinyan Dai, <b>Juncheng Li</b>, Qiaosi Yi, Faming Fang*, and Guixu Zhang.
 		<p><em>ACM International Conference on Multimedia</em> (<i><b>ACM MM</b></i>), 2021. <br>
-		<font color="red">多媒体顶级会议</font><br>
 		<a href="paper/ACMMM_2021.pdf", target="_blank">[论文]</a>
 		<a href="poster/ACMMM_poster.pdf", target="_blank">[海报]</a>
         <a href="https://github.com/MIVRC/SSRDEFNet-PyTorch", target="_blank">[代码]</a>
@@ -753,7 +789,6 @@
 		<td><a href="paper/ICCV_2021.pdf" target="_blank">Structure-Preserving Deraining with Residue Channel Prior Guidance</a><br>
 		Qiaosi Yi, <b>Juncheng Li</b>, Qinyan Dai, Faming Fang*, Guixu Zhang, and Tieyong Zeng.
 		<p><em>International Conference on Computer Vision</em> (<i><b>ICCV</b></i>), 2021. <br>
-		<font color="red">计算机顶级会议</font><br>
 		<a href="paper/ICCV_2021.pdf", target="_blank">[论文]</a>
 		<a href="poster/ICCV_poster.pdf", target="_blank">[海报]</a>
 		<a href="https://github.com/Joyies/SPDNet", target="_blank">[代码]</a>
@@ -763,60 +798,19 @@
 	<tr></tr>
     <tr></tr>
 	<tr></tr>
-
-	<tr>	
-		<td width="206">
-		<img src="./indexpics/MSRN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td> <a href="paper/ECCV_2018.pdf" target="_blank">Multi-scale Residual Network for Image Super-Resolution <font color="red">【Hot】【引用：1000+】</font></a><br>
-		<b>Juncheng Li</b>, Faming Fang*, Kangfu Mei, and Guixu Zhang.
-		<p><em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2018.<br>
-		<font color="red">计算机视觉顶级会议</font><br>
-		<iframe src="https://ghbtns.com/github-btn.html?user=MIVRC&repo=MSRN-PyTorch&type=star&count=true&size=small" frameborder="0" scrolling="0" width="150px" height="20px"></iframe>
-		<iframe src="https://ghbtns.com/github-btn.html?user=MIVRC&repo=MSRN-PyTorch&type=fork&count=true&size=small" frameborder="0" scrolling="0" width="150" height="20" title="GitHub"></iframe><br>
-		<a href="paper/ECCV_2018.pdf", target="_blank">[论文]</a>
-        <a href="poster/MSRN-poster.pdf", target="_blank">[海报]</a>
-		<a href="https://github.com/MIVRC/MSRN-PyTorch", target="_blank">[代码]</a>
-		<a href="https://junchenglee.com/projects/ECCV2018_MSRN", target="_blank">[主页]</a>
-		</td>
-	</tr>
-	<tr></tr>
-    <tr></tr>
-	<tr></tr>	
 </tbody></table>
 
 
 
-<h4>研讨会论文</h4></table></table>
+<!-- <h4>研讨会论文</h4></table></table>
 <table id="tbPublications" width="100%">
-	<tr>	
-		<td width="206">
-		<img src="./indexpics/ESRT.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td> <a href="https://arxiv.org/pdf/2108.11084.pdf" target="_blank">Transformer for Single Image Super-Resolution <font color="red">【Hot】【引用：1000+】</font></a><br>
-		Zhisheng Lu#, <b>Juncheng Li#</b>, Hong Liu*, Chaoyan Huang, Linlin Zhang, and Tieyong Zeng
-		<p><em>The Conference on Computer Vision and Pattern Recognition Workshop</em> (<i><b>CVPR Workshop</b></i>), 2022. <br>
-		<font color="red">NTIRE</font><br>
-		<iframe src="https://ghbtns.com/github-btn.html?user=luissen&repo=ESRT&type=star&count=true&size=small" frameborder="0" scrolling="0" width="150px" height="20px"></iframe>
-		<iframe src="https://ghbtns.com/github-btn.html?user=luissen&repo=ESRT&type=fork&count=true&size=small" frameborder="0" scrolling="0" width="150" height="20" title="GitHub"></iframe><br>
-		<a href="paper/ESRT.pdf", target="_blank">[论文]</a>
-		<a href="paper/ESRT-supp.pdf", target="_blank">[补充材料]</a>
-		<a href="poster/ESRT.pdf", target="_blank">[海报]</a>
-		<a href="https://github.com/luissen/ESRT", target="_blank">[代码]</a>
-		<a href="projects/ESRT", target="_blank">[主页]</a>
-		</td>
-	</tr>
-	<tr></tr>
-    <tr></tr>
-	<tr></tr>
-
     <tr>	
 		<td width="206">
 		<img src="./indexpics/MDRN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="https://arxiv.org/pdf/2204.13873.pdf" target="_blank">Multiple Degradation and Reconstruction Network for Single Image Denoising via Knowledge Distillation </a><br>
 		<b>Juncheng Li</b>, Hanhui Yang, Qiaosi Yi, Faming Fang, Guangwei Gao, Tieyong Zeng*, and Guixu Zhang
-		<p><em>The Conference on Computer Vision and Pattern Recognition Workshop</em> (<i><b>CVPR Workshop</b></i>), 2022. <br>
+		<p><em>The Conference on Computer Vision and Pattern Recognition (<i><b>CVPR</b></i>) Workshop</em>, 2022. <br>
 		<font color="red">NTIRE</font><br>
 		<a href="paper/MDRN.pdf", target="_blank">[论文]</a>
 		<a href="poster/MDRN.pdf", target="_blank">[海报]</a>
@@ -832,7 +826,7 @@
 		</td>		
 		<td> <a href="paper/ICCVW_LCI_2019.pdf" target="_blank">Lightweight and Accurate Recursive Fractal Network for Image Super-Resolution</a><br>
 		<b>Juncheng Li</b>, Yiting Yuan, Kangfu Mei, and Faming Fang*.
-		<p><em>International Conference on Computer Vision Workshop</em> (<i><b>ICCV Workshop</b></i>), 2019. <br>
+		<p><em>International Conference on Computer Vision (<i><b>ICCV</b></i>) Workshop</em>, 2019. <br>
 		<font color="red">口头报告(Oral Presentation). Student Travel Award.</font><br>
 		<a href="paper/ICCVW_LCI_2019.pdf", target="_blank">[论文]</a>
         <a href="poster/ICCVW_LCI_poster.pdf", target="_blank">[海报]</a>
@@ -844,7 +838,7 @@
 	<tr></tr>
     <tr></tr>
 	<tr></tr>
-</tbody></table>
+</tbody></table> -->
 
 
 <!-- <h4>精选比赛报告</h4>
@@ -1192,7 +1186,7 @@
 <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=lSzpjw-jyYmDQRUSrVJGAFZBVU3oVwp87NxUFm1Zt_w'></script>
 </div> -->     
 <br>
-&copy; 李俊诚 | 最后更新: 2025-7
+&copy; 李俊诚 | 最后更新: 2025-10
 </center>
 </p>
 
