--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
 <div class="scroll-container">
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>One paper is accepted to IEEE TSP, 2025.</td></tr>
 		<tr><td>One paper is accepted to PR, 2025.</td></tr>
 		<tr><td>One paper is accepted to ESWA, 2025.</td></tr>
 		<tr><td>One paper is accepted to IEEE JBHI, 2025.</td></tr>
@@ -706,7 +707,7 @@
 	<tr></tr>
     <tr></tr>
 	<tr></tr>
-	
+
 	<tr>	
 		<td width="206">
 		<img src="./indexpics/CVPR2024.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
