--- a/index_zw.html
+++ b/index_zw.html
@@ -162,6 +162,7 @@
 <div class="scroll-container">
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>一篇论文被 IEEE TSP 接收, 2025.</td></tr>
 		<tr><td>一篇论文被 PR 接收, 2025.</td></tr>
 		<tr><td>一篇论文被 ESWA 接收, 2025.</td></tr>
 		<tr><td>一篇论文被 IEEE JBHI 接收, 2025.</td></tr>
@@ -717,7 +718,7 @@
 	<tr></tr>
     <tr></tr>
 	<tr></tr>
-	
+
 	<tr>	
 		<td width="206">
 		<img src="./indexpics/CVPR2024.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
