--- a/index.html
+++ b/index.html
@@ -306,8 +306,8 @@
 	</tr>
 	<tr></tr>
     <tr></tr>
-	<tr></tr>
- </tbody></table> -->
+	<tr></tr> -->
+ </tbody></table>
 
 
 <h3>Medical Image Processing</h4>
