--- a/index_zw.html
+++ b/index_zw.html
@@ -328,7 +328,7 @@
 	 </tbody></table>
 
 
-<h3>医学影像处理论文</h3>
+<h3>医学影像处理</h3>
 <h4>期刊论文</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
@@ -507,7 +507,7 @@
 	<tr></tr>
 </tbody></table>
 
-<h3>自然图像处理论文</h3>
+<h3>自然图像处理</h3>
 <h4>期刊论文</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
@@ -742,7 +742,7 @@
 		<td><a href="http://arxiv.org/abs/2204.13286" target="_blank">Lightweight Bimodal Network for Single-Image Super-Resolution via Symmetric CNN and Recursive Transformer</a><br>
 		Guangwei Gao#, Zhengxue Wang#, <b>Juncheng Li*</b>, Wenjie Li, Yi Yu, and Tieyong Zeng
 		<p><em>International Joint Conference on Artificial Intelligence</em> (<i><b>IJCAI</b></i>), 2022. <br>
-		<font color="red">人工智能顶会. 口头报告（Oral Presentation）</font><br>
+		<font color="red">口头报告（Oral Presentation）</font><br>
 		<a href="paper/IJCAI2022.pdf", target="_blank">[论文]</a>
 		<a href="https://github.com/IVIPLab/LBNet", target="_blank">[代码]</a>
 		<a href="https://guangweigao.github.io/IJCAI22/LBNet.html", target="_blank">[主页]</a>
@@ -756,7 +756,6 @@
 		<td><a href="" target="_blank">Feature Distillation Interaction Weighting Network for Lightweight Image Super-Resolution</a><br>
 		Guangwei Gao#, Wenjie Li#, <b>Juncheng Li*</b>, Fei Wu, Huimin Lu, and Yi Yu
 		<p><em>Association for the Advancement of Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2022. <br>
-		<font color="red">人工智能顶会</font><br>
 		<a href="paper/AAAI.pdf", target="_blank">[论文]</a>
 		<a href="poster/AAAI-poster.pdf", target="_blank">[海报]</a>
 		<a href="https://github.com/IVIPLab/FDIWN", target="_blank">[代码]</a>
