--- a/index.html
+++ b/index.html
@@ -710,9 +710,25 @@
 
 	<tr>	
 		<td width="206">
+		<img src="./indexpics/ACMMM2025.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td><a href="" target="_blank">Cross Paradigm Representation and Alignment Transformer for Image Deraining <font color="red">【New】</font></a><br>
+		Shun Zou, Yi Zou, <b>Juncheng Li</b>, Guangwei Gao*, Guojun Qi
+		<p><em>ACM International Conference on Multimedia</em> (<i><b>ACMMM</b></i>), 2025. <br>
+		<a href="paper/ACMMM_2025.pdf", target="_blank">[Paper]</a>
+		<a href="", target="_blank">[Poster]</a>
+		<a href="", target="_blank">[Code]</a>
+		</td>
+	</tr>
+	<tr></tr>
+	<tr></tr>
+	<tr></tr>
+
+	<tr>	
+		<td width="206">
 		<img src="./indexpics/CVPR2024.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td><a href="" target="_blank">Learning Coupled Dictionaries from Unpaired Data for Image Super-Resolution <font color="red">【New】</font></a><br>
+		<td><a href="" target="_blank">Learning Coupled Dictionaries from Unpaired Data for Image Super-Resolution </a><br>
 		Longguang Wang, <b>Juncheng Li</b>, Yingqian Wang, Qingyong Hu, and Yulan Guo*.
 		<p><em>Conference on Computer Vision and Pattern Recognition</em> (<i><b>CVPR</b></i>), 2024. <br>
 		<a href="paper/CVPR.pdf", target="_blank">[Paper]</a>
