--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
 <h2>News</h2>
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>Congratulations! Google Scholar citations has reached 5,000 citations! 2025.</td></tr>
 		<tr><td>Congratulations! ESRT has reached 1,000 citations! 2025.</td></tr>
 		<tr><td>Selected into the World's Top 2% Scientists list, 2025.</td></tr>
 		<tr><td>Congratulations! MSRN has reached 1,000 citations! 2025.</td></tr>
@@ -259,7 +260,7 @@
 </tbody>
 </table>
 
-<h2>Selected Publications [Total Citations: 4998] [Highest Citation: 1083] </h2>
+<h2>Selected Publications [Total Citations: 5007] [Highest Citation: 1084] </h2>
 <h4>#：Co-ﬁrst authors *：Corresponding author</h3>
 
 <h3>Survey</h4>
