--- a/index_zw.html
+++ b/index_zw.html
@@ -102,9 +102,10 @@
 <h2>新闻</h2>
 <table style="border-spacing:2px">
 	<tbody>
-		<tr><td>祝贺！ESRT的引用次数已达1,000次！ 2025</td></tr>
+		<tr><td>祝贺！谷歌学术总引用次数突破 5,000次！ 2025</td></tr>
+		<tr><td>祝贺！ESRT的引用次数突破 1,000次！ 2025</td></tr>
 		<tr><td>入选全球前2%顶尖科学家榜单, 2025.</td></tr>
-		<tr><td>祝贺！MSRN的引用次数已达1,000次！ 2025</td></tr>
+		<tr><td>祝贺！MSRN的引用次数突破 1,000次！ 2025</td></tr>
 		<tr><td>1 篇论文（IEEE TITS）入选ESI高被引论文, 2025.</td></tr>
 		<tr><td>1 篇论文（IEEE TMM）入选ESI高被引论文, 2025.</td></tr>
 		<tr><td>我将担任 ECAI-25 的高级程序委员会成员（SPC）, 2025.</td></tr>
@@ -277,7 +278,7 @@
 </table>
 
 
-<h2>精选出版物 [总引用: 4998] [最高引用: 1083] </h2>
+<h2>精选出版物 [总引用: 5007] [最高引用: 1084] </h2>
 <h4>#：共同一作 *：通讯作者</h3>
 
 <h3>综述</h3>
