--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 	<tbody>
 		<tr><td>Congratulations! Google Scholar citations has reached 5,000 citations! 2025.</td></tr>
 		<tr><td>Congratulations! ESRT has reached 1,000 citations! 2025.</td></tr>
-		<tr><td>Selected into the World's Top 2% Scientists list, 2025.</td></tr>
+		<tr><td>Congratulations! Selected into the World's Top 2% Scientists list, 2025.</td></tr>
 		<tr><td>Congratulations! MSRN has reached 1,000 citations! 2025.</td></tr>
 		<tr><td>One paper (IEEE TITS) is selected as Highly Cited Papers in the latest issue of ESI Index, 2025.</td></tr>
 		<tr><td>One paper (IEEE TMM) is selected as Highly Cited Papers in the latest issue of ESI Index, 2025.</td></tr>
