--- a/index_zw.html
+++ b/index_zw.html
@@ -163,6 +163,7 @@
 <div class="scroll-container">
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>一篇论文被 TMLR 接收, 2025.</td></tr>
 		<tr><td>一篇论文被 IEEE TSP 接收, 2025.</td></tr>
 		<tr><td>一篇论文被 PR 接收, 2025.</td></tr>
 		<tr><td>一篇论文被 ESWA 接收, 2025.</td></tr>
