--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					School of Computer Science and Technology<br>
 					East China Normal University<br>
 					<br>
-					Email: cvjunchengli[at]gmail.com<br>
+					Email: jcli[at]cs.ecnu.edu.cn / cvjunchengli[at]gmail.com<br>
 					<br>
 					<font color="red">I'm always looking for self-motivated students to work with me on computer vision, image processing, and medical image analysis. For prospective students, please send me an email with your CV and transcript.</font> 	       
 				</p>
