--- a/index_zw.html
+++ b/index_zw.html
@@ -50,7 +50,7 @@
 					计算机科学与技术学院<br>
 					华东师范大学<br>
 					<br>
-					邮箱: cvjunchengli[at]gmail.com <br>   
+					邮箱: jcli[at]cs.ecnu.edu.cn / cvjunchengli[at]gmail.com <br>   
 					<br>
 					<font color="red">我一直在寻找有上进心的学生与我一起研究计算机视觉、图像处理和医学影像分析。有意向的学生请将你的简历和成绩单通过电子邮件发送给我。</font>    
 				</p>
