--- a/index_zw.html
+++ b/index_zw.html
@@ -279,7 +279,7 @@
 </table>
 
 
-<h2>精选出版物 [总引用: 5091] [最高引用: 1092] </h2>
+<h2>精选出版物 [总引用: 5100] [最高引用: 1093] </h2>
 <h4>#：共同一作 *：通讯作者</h3>
 
 <h3>综述</h3>
@@ -898,6 +898,21 @@
     <tr></tr>
 	<tr></tr>
  </tbody></table> -->
+
+<h2>学生</h2>
+ <h3>上海大学</h3>
+ <table id="tbTeaching" border="0" width="100%">
+	 <tbody>
+		 <tr>
+			<td>2022: </td> <td>赵阳 (国家奖学金、上海市优秀毕业生，百度在线网络技术有限公司)</td> <td></td>
+		 </tr>
+		 <tr>
+			<td>2023: </td> <td>方鑫铭、吕炜熠、潘莉文</td>
+		</tr><tr>
+			<td>2024: </td> <td>周延、李欣瑶</td>
+		</tr>
+	 </tbody>
+ </table>
 
 
 <h2>学术服务</h2>
