--- a/index_zw.html
+++ b/index_zw.html
@@ -904,12 +904,12 @@
  <table id="tbTeaching" border="0" width="100%">
 	 <tbody>
 		 <tr>
-			<td>2022: </td> <td>赵阳 (国家奖学金、上海市优秀毕业生，百度在线网络技术有限公司)</td> <td></td>
+			<td>2022级: </td> <td>赵阳 (国家奖学金、上海市优秀毕业生，百度在线网络技术有限公司)</td> <td></td>
 		 </tr>
 		 <tr>
-			<td>2023: </td> <td>方鑫铭、吕炜熠、潘莉文</td>
+			<td>2023级: </td> <td>方鑫铭、吕炜熠、潘莉文</td>
 		</tr><tr>
-			<td>2024: </td> <td>周延、李欣瑶</td>
+			<td>2024级: </td> <td>周延、李欣瑶</td>
 		</tr>
 	 </tbody>
  </table>
