--- a/index_zw.html
+++ b/index_zw.html
@@ -66,7 +66,7 @@
 				</p><br>
 			</td>
 			<td>
-				<img src="./pic/JunchengLi.jpeg" border="0" width="200"><br>
+				<img src="./pic/JunchengLi.jpg" border="0" width="200"><br>
 			</td>
 		</tr>
 		<tr>
