--- a/index_zw.html
+++ b/index_zw.html
@@ -907,7 +907,7 @@
 			<td>2025届: 赵阳 (国家奖学金、上海市优秀毕业生，百度在线网络技术有限公司)</td> <td></td>
 		 </tr>
 		 <tr>
-			<td>2023级: 方鑫铭、吕炜熠、潘莉文</td>
+			<td>2023级: 方鑫铭(国家奖学金）、吕炜熠、潘莉文</td>
 		</tr><tr>
 			<td>2024级: 周延、李欣瑶</td>
 		</tr>
