--- a/index_zw.html
+++ b/index_zw.html
@@ -904,10 +904,10 @@
  <table id="tbTeaching" border="0" width="100%">
 	 <tbody>
 		 <tr>
-			<td>2025届: 赵阳 (国家奖学金、上海市优秀毕业生，百度在线网络技术有限公司)</td> <td></td>
+			<td>2025届: 赵阳 (国家奖学金、上海市优秀毕业生，百度)</td> <td></td>
 		 </tr>
 		 <tr>
-			<td>2023级: 方鑫铭(国家奖学金）、吕炜熠、潘莉文</td>
+			<td>2023级: 方鑫铭 (国家奖学金）、吕炜熠、潘莉文</td>
 		</tr><tr>
 			<td>2024级: 周延、李欣瑶</td>
 		</tr>
@@ -921,7 +921,7 @@
 			<td>2025届: 张灏翔（校优秀毕业论文、【加州大学圣地亚哥分校】深造）</td>
 		 </tr>
 		 <tr>
-			<td>董晨曦、陈名驹 等</td>
+			<td>其他：董晨曦、陈名驹 等</td>
 		 </tr>
 	 </tbody>
  </table>
