--- a/index_zw.html
+++ b/index_zw.html
@@ -279,7 +279,7 @@
 </table>
 
 
-<h2>精选出版物 [总引用: 5157] [最高引用: 1094] </h2>
+<h2>精选出版物 [总引用: 5171] [最高引用: 1095] </h2>
 <h4>#：共同一作 *：通讯作者</h3>
 
 <h3>综述</h3>
@@ -904,7 +904,7 @@
  <table id="tbTeaching" border="0" width="100%">
 	 <tbody>
 		 <tr>
-			<td>2025届: 赵阳 (国家奖学金、上海市优秀毕业生，百度)</td> <td></td>
+			<td>2025届: 赵阳 (国家奖学金、上海市优秀毕业生、百度)</td> <td></td>
 		 </tr>
 		 <tr>
 			<td>2023级: 方鑫铭 (国家奖学金）、吕炜熠、潘莉文</td>
