--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
 <div class="scroll-container">
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>One paper is accepted to ACM Computing Surveys, 2025.</td></tr>
 		<tr><td>One paper is accepted to TMLR, 2025.</td></tr>
 		<tr><td>One paper is accepted to IEEE TSP, 2025.</td></tr>
 		<tr><td>One paper is accepted to PR, 2025.</td></tr>
@@ -267,6 +268,20 @@
 <h3>Survey</h4>
 <table id="tbPublications" width="100%">
 	<tbody> 
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/CUSR2025.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="" target="_blank">Survey on Deep Face Restoration: From Non-blind to Blind and Beyond<font color="red">【New】</font></a><br>
+		Wenjie Li, Mei Wang, Kai Zhang, <b>Juncheng Li</b>, Xiaoming Li, Yuhang Zhang, Guangwei Gao, Zhanyu Ma
+		<p><em>ACM Computing Surveys</em> (<i><b>CUSR</b></i>), 2025.<br>
+		<a href="paper/CUSR2025.pdf", target="_blank">[Paper]</a>
+		<a href="https://github.com/24wenjie-li/Awesome-Face-Restoration", target="_blank">[Code]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
 	<tr>	
 		<td width="206">
 		<img src="./indexpics/ESWA2025.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
