--- a/index_zw.html
+++ b/index_zw.html
@@ -163,6 +163,7 @@
 <div class="scroll-container">
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>一篇论文被 ACM Computing Surveys接收, 2025.</td></tr> 
 		<tr><td>一篇论文被 TMLR 接收, 2025.</td></tr>
 		<tr><td>一篇论文被 IEEE TSP 接收, 2025.</td></tr>
 		<tr><td>一篇论文被 PR 接收, 2025.</td></tr>
@@ -285,6 +286,20 @@
 <h3>综述</h3>
 	<table id="tbPublications" width="100%">
 		<tbody>
+		<tr>	
+		<td width="206">
+		<img src="./indexpics/CUSR2025.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="" target="_blank">Survey on Deep Face Restoration: From Non-blind to Blind and Beyond<font color="red">【New】</font></a><br>
+		Wenjie Li, Mei Wang, Kai Zhang, <b>Juncheng Li</b>, Xiaoming Li, Yuhang Zhang, Guangwei Gao, Zhanyu Ma
+		<p><em>ACM Computing Surveys</em> (<i><b>CUSR</b></i>), 2025.<br>
+		<a href="paper/CUSR2025.pdf", target="_blank">[论文]</a>
+		<a href="https://github.com/24wenjie-li/Awesome-Face-Restoration", target="_blank">[代码]</a>
+		</td>
+	    </tr>
+	    <tr></tr>
+        <tr></tr>
+	    <tr></tr>
 		<tr>	
 		    <td width="206">
 		    <img src="./indexpics/ESWA2025.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
