--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 		</td>		
 		<td> <a href="" target="_blank">Survey on Deep Face Restoration: From Non-blind to Blind and Beyond<font color="red">【New】</font></a><br>
 		Wenjie Li, Mei Wang, Kai Zhang, <b>Juncheng Li</b>, Xiaoming Li, Yuhang Zhang, Guangwei Gao, Zhanyu Ma
-		<p><em>ACM Computing Surveys</em> (<i><b>CUSR</b></i>), 2025.<br>
+		<p><em>ACM Computing Surveys</em> (<i><b>CSUR</b></i>), 2025.<br>
 		<a href="paper/CUSR2025.pdf", target="_blank">[Paper]</a>
 		<a href="https://github.com/24wenjie-li/Awesome-Face-Restoration", target="_blank">[Code]</a>
 		</td>
@@ -301,7 +301,7 @@
 		</td>		
 		<td> <a href="https://dl.acm.org/doi/abs/10.1145/3659100" target="_blank">A Systematic Survey of Deep Learning-based Single-Image Super-Resolution</a><br>
 		<b>Juncheng Li</b>, Zehua Pei, Wenjie Li, Guangwei Gao, Longguang Wang, Yingqian Wang, Tieyong Zeng
-		<p><em>ACM Computing Surveys</em> (<i><b>CUSR</b></i>), 2024.<br>
+		<p><em>ACM Computing Surveys</em> (<i><b>CSUR</b></i>), 2024.<br>
 		<iframe src="https://ghbtns.com/github-btn.html?user=CV-JunchengLi&repo=SISR-Survey
 		&type=star&count=true&size=small" frameborder="0" scrolling="0" width="150px" height="20px"></iframe><br>
 		<a href="https://dl.acm.org/doi/abs/10.1145/3659100", target="_blank">[Paper]</a>
