--- a/index_zw.html
+++ b/index_zw.html
@@ -79,7 +79,7 @@
 <tbody> 
 	<tr>
 	<td style="text-align: justify;">		
-	李俊诚，上海市青年科技英才“扬帆计划”获得者，入选斯坦福大学发布的【全球前2%顶尖科学家】榜单，获中国产学研合作创新成果一等奖。博士毕业于华东师范大学，师从<b><a href="https://faculty.ecnu.edu.cn/_s16/zgx2/main.psp", target="_blank">张桂戌</a></b>教授，曾担任香港中文大学博后研究员，合作导师为<b><a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a></b>教授。2022年7月入职上海大学以来，主持包括国自然青年基金、上海市科委“科技创新行动计划”面上项目、上海市青年科技英才扬帆计划、上海高校青年教师重点资助项目及多个重点实验室开放课题。长期从事计算机视觉、自然图像/医学影像智能处理与人工智能等研究，取得了一系列原创性成果，在国际知名期刊和会议（如：ACM Computing Survey、IEEE TIP\TNNLS\TMM\TCSVT\TMI、CVPR、ECCV、ICCV、AAAI、IJCAI、MICCAI等）上发表论文50余篇（ESI高被引论文4篇）, 谷歌学术引用量超5000余次，其中单篇一作最高引用1000余次。同时，还担任Mathematics和IET Computer Version期刊客座编辑、多个国际挑战赛的组织者和程序委员，并长期担任包括TPAMI、TIP、TNNLS、TMM、CVPR、ICCV、ECCV、MICCAI在内的多个国际期刊和会议审稿人。
+	李俊诚，上海市青年科技英才“扬帆计划”获得者，入选斯坦福大学发布的【全球前2%顶尖科学家】榜单，获中国产学研合作创新成果一等奖。博士毕业于华东师范大学，师从<b><a href="https://faculty.ecnu.edu.cn/_s16/zgx2/main.psp", target="_blank">张桂戌</a></b>教授，曾担任香港中文大学博后研究员，合作导师为<b><a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a></b>教授。2022年7月入职上海大学以来，主持包括国自然青年基金、上海市科委“科技创新行动计划”面上项目、上海市青年科技英才扬帆计划、上海高校青年教师重点资助项目及多个重点实验室开放课题。长期从事计算机视觉、自然图像/医学影像智能处理与人工智能等研究，取得了一系列原创性成果，在国际知名期刊和会议（如：ACM Computing Survey、IEEE TIP\TNNLS\TMM\TCSVT\TMI、CVPR、ECCV、ICCV、AAAI、IJCAI、MICCAI等）上发表论文50余篇（ESI高被引论文4篇）, 谷歌学术引用量超5300余次，其中单篇一作最高引用1100余次（2篇）。同时，还担任Mathematics和IET Computer Version期刊客座编辑、多个国际挑战赛的组织者和程序委员，并长期担任包括TPAMI、TIP、TNNLS、TMM、CVPR、ICCV、ECCV、MICCAI在内的多个国际期刊和会议审稿人。
 	</td>
 	</tr>
 </tbody>
@@ -280,7 +280,7 @@
 </table>
 
 
-<h2>精选出版物 [总引用: 5317] [最高引用: 1102] </h2>
+<h2>精选出版物 [总引用: 5321] [最高引用: 1103] </h2>
 <h4>#：共同一作 *：通讯作者</h3>
 
 <h3>综述</h3>
@@ -701,7 +701,7 @@
 		<td width="206">
 		<img src="./indexpics/MSRN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="paper/ECCV_2018.pdf" target="_blank">Multi-scale Residual Network for Image Super-Resolution <font color="red">【Hot】【引用：1000+】</font></a><br>
+		<td> <a href="paper/ECCV_2018.pdf" target="_blank">Multi-scale Residual Network for Image Super-Resolution <font color="red">【Hot】【引用：1100+】</font></a><br>
 		<b>Juncheng Li</b>, Faming Fang*, Kangfu Mei, and Guixu Zhang.
 		<p><em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2018.<br>
 		<iframe src="https://ghbtns.com/github-btn.html?user=MIVRC&repo=MSRN-PyTorch&type=star&count=true&size=small" frameborder="0" scrolling="0" width="150px" height="20px"></iframe>
