--- a/index.html
+++ b/index.html
@@ -908,6 +908,16 @@
 
 
 <h2>Academic Services</h2>
+
+<h3>Area Chair</h3>
+<table id="tbTeaching" border="0" width="100%">
+	<tbody>
+		<tr>
+			<td> <a href="", target="_blank">MICCAI 2026 Challenge</a></td>
+		</tr>
+	</tbody>
+</table>
+
 <h3>Young Editorial Board Member</h3>
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
@@ -921,13 +931,16 @@
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
-			<td> <a href="https://www.mdpi.com/journal/mathematics/special_issues/TSQMQ830KB", target="_blank">Special issue "Mathematical Techniques and Artificial Intelligence in Image Processing" on the Journal of Mathematics.</a></td>
+			<td> <a href="https://www.mdpi.com/journal/mathematics/special_issues/TSQMQ830KB", target="_blank">Special issue "Representation Learning for Computer Vision and Pattern Recognition, 2nd Edition", Mathematics.</a></td>
 		</tr>
 		<tr>
-			<td> <a href="https://ietresearch.onlinelibrary.wiley.com/hub/journal/17519640/homepage/cfp", target="_blank">Special issue "Advanced Image Restoration and Enhancement in the Wild" on IET Computer Version.</a></td>
+			<td> <a href="https://www.mdpi.com/journal/mathematics/special_issues/TSQMQ830KB", target="_blank">Special issue "Mathematical Techniques and Artificial Intelligence in Image Processing", Mathematics.</a></td>
 		</tr>
 		<tr>
-			<td> <a href="https://www.mdpi.com/journal/mathematics/special_issues/V5G28PQF0B", target="_blank">Special issue "Representation Learning for Computer Vision and Pattern Recognition" on the Journal of Mathematics.</a></td>
+			<td> <a href="https://ietresearch.onlinelibrary.wiley.com/hub/journal/17519640/homepage/cfp", target="_blank">Special issue "Advanced Image Restoration and Enhancement in the Wild", IET Computer Version.</a></td>
+		</tr>
+		<tr>
+			<td> <a href="https://www.mdpi.com/journal/mathematics/special_issues/V5G28PQF0B", target="_blank">Special issue "Representation Learning for Computer Vision and Pattern Recognition", Mathematics.</a></td>
 		</tr>
 	</tbody>
 </table>
@@ -1213,7 +1226,7 @@
  <!--<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=lSzpjw-jyYmDQRUSrVJGAFZBVU3oVwp87NxUFm1Zt_w'></script>
 </div>-->  
 <br>
-&copy; Juncheng Li | Last updated: 2025-10
+&copy; Juncheng Li | Last updated: 2025-12
 </center>
 </p>
 
