--- a/index_zw.html
+++ b/index_zw.html
@@ -46,9 +46,8 @@
 				</div>
 
 				<p>
-					博士，副教授<br>
-					计算机科学与技术学院<br>
-					华东师范大学<br>
+					副教授，硕/博导<br>
+					华东师范大学 计算机科学与技术学院<br>
 					<br>
 					邮箱: jcli[at]cs.ecnu.edu.cn / cvjunchengli[at]gmail.com <br>   
 					<br>
@@ -943,6 +942,16 @@
 
 
 <h2>学术服务</h2>
+
+<h3>领域主席</h3>
+<table id="tbTeaching" border="0" width="100%">
+	<tbody>
+		<tr>
+			<td> <a href="", target="_blank">MICCAI 2026 Challenge</a></td>
+		</tr>
+	</tbody>
+</table>
+
 <h3>青年编委</h3>
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
@@ -956,13 +965,16 @@
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
-			<td> <a href="https://www.mdpi.com/journal/mathematics/special_issues/TSQMQ830KB", target="_blank">Special issue "Mathematical Techniques and Artificial Intelligence in Image Processing" on the Journal of Mathematics.</a></td>
+			<td> <a href="https://www.mdpi.com/journal/mathematics/special_issues/TSQMQ830KB", target="_blank">Special issue "Representation Learning for Computer Vision and Pattern Recognition, 2nd Edition", Mathematics.</a></td>
 		</tr>
 		<tr>
-			<td> <a href="https://ietresearch.onlinelibrary.wiley.com/hub/journal/17519640/homepage/cfp", target="_blank">Special issue "Advanced Image Restoration and Enhancement in the Wild" on IET Computer Version.</a></td>
+			<td> <a href="https://www.mdpi.com/journal/mathematics/special_issues/TSQMQ830KB", target="_blank">Special issue "Mathematical Techniques and Artificial Intelligence in Image Processing", Mathematics.</a></td>
 		</tr>
 		<tr>
-			<td> <a href="https://www.mdpi.com/journal/mathematics/special_issues/V5G28PQF0B", target="_blank">Special issue "Representation Learning for Computer Vision and Pattern Recognition" on the Journal of Mathematics.</a></td>
+			<td> <a href="https://ietresearch.onlinelibrary.wiley.com/hub/journal/17519640/homepage/cfp", target="_blank">Special issue "Advanced Image Restoration and Enhancement in the Wild", IET Computer Version.</a></td>
+		</tr>
+		<tr>
+			<td> <a href="https://www.mdpi.com/journal/mathematics/special_issues/V5G28PQF0B", target="_blank">Special issue "Representation Learning for Computer Vision and Pattern Recognition", Mathematics.</a></td>
 		</tr>
 	</tbody>
 </table>
